Fix(Projet Page): Display mobile pictures on 2 columns instead of 3 on mobile

--- a/client/styles/_projet.scss
+++ b/client/styles/_projet.scss
@@ -218,3 +218,9 @@ main.projet {
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  main.projet section.projet__galerie div.projet__images__mobile {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
